test_programs/compile_failure/regression_10431_enum/src/main.nr
// TODO: WIP

enum Foo<T> {
    Bar(T),
}

impl Foo<1> {}

fn main() {
    let foo: Foo<1> = std::mem::zeroed();
    println(foo);
}
